[package]
name = "rlox"
version = "0.1.0"
authors = ["Kinsey Favre <iyunkateus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "^0.8", features = ["macros"] }
anyhow = "^1.0"
thiserror = "^1.0"
